--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@tanstack/react-query": "^5.90.8",
     "@tanstack/react-table": "^8.21.3",
     "@tiptap/extension-link": "^3.11.0",
+    "@tiptap/extension-list": "^3.11.0",
+    "@tiptap/extension-text-align": "^3.11.0",
     "@tiptap/pm": "^3.11.0",
     "@tiptap/react": "^3.11.0",
     "@tiptap/starter-kit": "^3.11.0",
