--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/charts": "^8.3.9",
     "@mantine/core": "^8.3.9",
     "@mantine/dates": "^8.3.9",
+    "@mantine/dropzone": "^8.3.9",
     "@mantine/form": "^8.3.9",
     "@mantine/hooks": "^8.3.9",
     "@mantine/modals": "^8.3.9",
