--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-icons": "^5.5.0",
     "react-pdf-html": "^2.1.4",
     "recharts": "^3.4.1",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.12"
   },
   "devDependencies": {
