--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.562.0",
     "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
