--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "db:sync": "node scripts/db-sync.js"
   },
   "dependencies": {
+    "@azure/msal-browser": "^4.27.0",
+    "@azure/msal-react": "^3.0.23",
     "@clerk/nextjs": "^6.35.1",
     "@mantine/charts": "^8.3.9",
     "@mantine/core": "^8.3.9",
@@ -22,6 +24,7 @@
     "@mantine/nprogress": "^8.3.9",
     "@mantine/spotlight": "^8.3.9",
     "@mantine/tiptap": "^8.3.9",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@react-pdf/renderer": "^4.3.1",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.84.0",
@@ -39,12 +42,12 @@
     "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
     "next": "^16.0.7",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-pdf-html": "^2.1.4",
     "recharts": "^3.4.1",
-    "xlsx": "^0.18.5",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "zod": "^4.1.12"
   },
   "devDependencies": {
